--- a/layouts/index.html
+++ b/layouts/index.html
@@ -52,6 +52,24 @@
               </div>
           </div>
         </section>
+
+        <!-- Raisee -->
+        <section class="bar background-gray no-mb">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <h1 style="margin-bottom: 40px;">RAISEE Organization</h1>
+                <p class="lead">Rewards</p>
+                <p class="lead">Awareness</p>
+                <p class="lead">Investigation</p>
+                <p class="lead">Safety</p>
+                <p class="lead">Education</p>
+                <p class="lead">Elderly</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- end -->
         {{ partial "see_more.html" . }}
 
         {{ partial "recent_posts.html" . }}
